--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Operating Systems - Sistem Operasi
-version:     "615a---15-Aug-2024"
+version:     "616---20-Aug-2024"
 copyright:   "2018-2024"
 description: This is the Operating System course site,
       a GitHub Page, hosted at GitHub.com (thank you!).
