--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Operating Systems - Sistem Operasi
-version:     "618---22-Aug-2024"
+version:     "Fri 23 Aug 2024 06:00"
 copyright:   "2018-2024"
 description: This is the Operating System course site,
       a GitHub Page, hosted at GitHub.com (thank you!).
